--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
